k8s/users-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: users-service
  namespace: skillbridge
  labels:
    app: users-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: users-service
  template:
    metadata:
      labels:
        app: users-service
    spec:
      containers:
        - name: users-service
          image: us-central1-docker.pkg.dev/<PROJECT_ID>/skillbridge-repo/users-service:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 4101
---
apiVersion: v1
kind: Service
metadata:
  name: users-service
  namespace: skillbridge
  labels:
    app: users-service
spec:
  type: ClusterIP
  selector:
    app: users-service
  ports:
    - port: 4101
      targetPort: 4101
      protocol: TCP
      name: http
